--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6,11 +6,26 @@ body {
 	margin: 0px;
 }
 
+.button {
+	background-color: #4d4d4d;
+	border: none;
+	color: white;
+	padding: 10px 15px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
+
+.button:hover {
+	background-color: #0099ff;
+}
+
 label input{
 	margin: 2px;
 }
 .formMin{
-	width: 60px;
+	width: 80px;
 }
 
 #menu_outer {
@@ -86,15 +101,15 @@ input[type=deleteImage]:hover {
 }
 
 .imageDiv{
-	width: 150px;
+	width: 200px;
 	text-align: justify;
 	display: inline-block;
 	padding: 0px;
 }
 
 .imageDiv img{
-	width: 100px;
-	height: 100px;
+	width: 150px;
+	height: 150px;
 	padding: 0px;
 
 }
@@ -138,7 +153,7 @@ li a:hover {
 	border-top-left-radius:0px;
 }.UserTabel table{
     border-collapse: collapse;
-	width: 500px;
+	width: 400px;
 	display: block;
 	margin:0 auto;
 }
