--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,6 +25,20 @@ label input{
 	margin: 2px;
 }
 
+.custom-file-upload {
+	background-color: #4d4d4d;
+	border: none;
+	color: white;
+	padding: 10px 15px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
+input[type="file"] {
+	display: none;
+}
+
 .activeIcon img {
 	display: block;
 	margin-left: auto;
