--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -34,7 +34,13 @@ label input{
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
+	font-family:"Arial";
 }
+
+.custom-file-upload:hover {
+	background-color: #0099ff;
+}
+
 input[type="file"] {
 	display: none;
 }
